add thêm 1 tí
